made responsive design fix for error message bug and wordwrap

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,3 +1,4 @@
+
 body > header {
   display: flex;
   flex-direction: column;
@@ -11,7 +12,24 @@ body > header {
   margin-top: 5em;
 }
 
+@media only screen and (min-width: 1024px) {
 
+  body > header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    width: 30%;
+    background-color: #00308f;
+    background-image: url("https://www.transparenttextures.com/patterns/black-twill.png");
+    color: #FFFFFF;
+    margin: 1em;
+    margin-left : 2em;
+  }
+ 
+  
+}
 
 
 
